Filled in JS file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+    integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
+    crossorigin="anonymous" />
+  <link rel="shortcut icon" href="">
   <link rel="stylesheet" href="style.css">
   <title>Music Player</title>
 </head>
@@ -22,7 +25,7 @@
 
     <audio src="music/g-eazy-type.mp3" id="audio"></audio>
     <div class="img-container">
-      <img src="images/gEazyType.jpg" alt="music-cover" id="cover">
+      <img src="images/g-eazy-type.jpg" alt="music-cover" id="cover">
     </div>
 
     <div class="navigation">
